--- a/index.html
+++ b/index.html
@@ -121,10 +121,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">OMDB: Object-Rational Database Design</h3>
               <div class="subheading mb-3">ChinaSofti International</div>
-              <span class="d-none d-sm-block">
+              <span class="d-none d-lg-block">
                 <a href="img/profile.jpg"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="100px;" src="img/profile.jpg" alt="Tianpeng Gou"></a>
                 <img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  width="100px;" src="img/profile.jpg" alt="Tianpeng Gou">
               </span>
+              <div class="subheading mb-3">
+                  <a href="#">[PDF]</a> &nbsp;
+                  <a href="#">[CODE]</a>
+              </div>
               <p>
                     Intro
               </p>
