--- a/index.html
+++ b/index.html
@@ -120,24 +120,38 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">OMDB: Object-Rational Database Design</h3>
-              <div class="subheading mb-3">ChinaSofti International</div>
+              <div class="subheading mb-3">Object-Relational Database - 31075 - UTS</div>
               <span class="d-none d-lg-block">
-                <a href="img/profile.jpg"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="100px;" src="img/profile.jpg" alt="Tianpeng Gou"></a>
-                <img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  width="100px;" src="img/profile.jpg" alt="Tianpeng Gou">
+                <a href="img/omdb/omdb1.jpg" target="_blank"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="170px;" src="img/omdb/omdb1.jpg" alt="omdb1"></a>
+                <a href="img/omdb/omdb2.jpg" target="_blank"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="180px;" src="img/omdb/omdb2.jpg" alt="omdb2"></a>
               </span>
               <div class="subheading mb-3">
-                  <a href="#">[PDF]</a> &nbsp;
-                  <a href="#">[CODE]</a>
+                  <a href="pdf/OMDB-Object-Relational-DB-Design.pdf" target="_blank">[PDF]</a> &nbsp;
+                  <a href="https://github.com/tgou1055/project_repo/blob/master/OMDB%20-%20Object-Relational%20DB%20Design/omdb.sql" target="_blank">[CODE]</a>
               </div>
               <p>
-                    Intro
+                    This project involves the design and implementation of an Online Movies Database (OMDB). <br>
+                    OMDB maintains information about movies being screened in cinemas near users. <br>
+                    The database supports a website that allows the users to query this information  <br>
+                    and search for movies and cinema sessions. 
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2017 - June 2017</span>
+              <span class="text-primary">August 2017 - October 2017</span>
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Technical Engineer</h3>
+              <div class="subheading mb-3">3D Dream Factory</div>
+              <p>Intro</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">November 2015 - June 2016</span>
+            </div>
+          </div>
+          
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Technical Engineer</h3>
@@ -288,31 +302,31 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+              </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              1<sup>st</sup>
+              </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+              </li>
             <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              </li>
           </ul>
         </div>
       </section>
