--- a/index.html
+++ b/index.html
@@ -129,11 +129,14 @@
                   <a href="pdf/OMDB-Object-Relational-DB-Design.pdf" target="_blank">[PDF]</a> &nbsp;
                   <a href="https://github.com/tgou1055/project_repo/blob/master/OMDB%20-%20Object-Relational%20DB%20Design/omdb.sql" target="_blank">[CODE]</a>
               </div>
-              <p>
-                    This project involves the design and implementation of an Online Movies Database (OMDB). <br>
-                    OMDB maintains information about movies being screened in cinemas near users. <br>
-                    The database supports a website that allows the users to query this information  <br>
+              <p style="text-align:justify;">
+                    This project involves the design and implementation of an Online Movies Database (OMDB). 
+                    OMDB maintains information about movies being screened in cinemas near users. 
+                    The database supports a website that allows the users to query this information 
                     and search for movies and cinema sessions. 
+                    Each movie is screened in one or more cinemas. 
+                    The event listings show cinema sessions for each movie for one week (i.e.
+                    movies screened at a given cinema for seven days, starting today).
               </p>
             </div>
             <div class="resume-date text-md-right">
