--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <a href="pdf/OMDB-Object-Relational-DB-Design.pdf" target="_blank">[PDF]</a> &nbsp;
                   <a href="https://github.com/tgou1055/project_repo/blob/master/OMDB%20-%20Object-Relational%20DB%20Design/omdb.sql" target="_blank">[CODE]</a>
               </div>
-              <p style="text-align:justify;">
+              <p style="text-align:justify; width:1000px;" >
                     This project involves the design and implementation of an Online Movies Database (OMDB). 
                     OMDB maintains information about movies being screened in cinemas near users. 
                     The database supports a website that allows the users to query this information 
