--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Tianpeng Gou</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="Tianpeng Gou">
         </span>
@@ -129,7 +129,7 @@
                   <a href="pdf/OMDB-Object-Relational-DB-Design.pdf" target="_blank">[PDF]</a> &nbsp;
                   <a href="https://github.com/tgou1055/project_repo/blob/master/OMDB%20-%20Object-Relational%20DB%20Design/omdb.sql" target="_blank">[CODE]</a>
               </div>
-              <p style="text-align:justify; width:1000px;" >
+              <p style="text-align:justify;" >
                     This project involves the design and implementation of an Online Movies Database (OMDB). 
                     OMDB maintains information about movies being screened in cinemas near users. 
                     The database supports a website that allows the users to query this information 
