--- a/index.html
+++ b/index.html
@@ -146,12 +146,29 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Technical Engineer</h3>
-              <div class="subheading mb-3">3D Dream Factory</div>
-              <p>Intro</p>
+              <h3 class="mb-0">AviCargo: UAV Design Challenge</h3>
+              <div class="subheading mb-3">Aerospace Design 4 - AERO4460 - USYD</div>
+              <span class="d-none d-lg-block">
+                <a href="img/AviCargo/avi2.jpg" target="_blank"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="220px;" src="img/AviCargo/avi2.jpg" alt="avi2"></a>
+                <a href="img/AviCargo/avi1.jpg" target="_blank"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="180px;" src="img/AviCargo/avi1.jpg" alt="avi1"></a>
+                <a href="img/AviCargo/avi3.jpg" target="_blank"><img class="img-fluid rounded mx-auto mb-2 img-thumbnail"  style="" width="200px;" src="img/AviCargo/avi3.jpg" alt="avi3"></a>
+              </span>
+              <div class="subheading mb-3">
+                  <a href="pdf/AviCargo-UAV-Design-Report.pdf" target="_blank">[PDF]</a> 
+              </div>
+              <p style="text-align:justify;">
+                    This project is to design a Autonomous Delivery Vehicle as a group of 7 to fulfill the Flying Donkey Challenge.
+                    The Flying Donkey Challenge is a design competition for an unmanned aerial vehicle with the purpose of cargo
+                    delivery around Mount Kenya. 
+                    The proposed ADV features design characteristics which are suited for the target mission. Initial
+                    performance constraints were found to be the take-off power requirement and this was addressed
+                    with employing twin engines with high power to weight ratios. Space requirements due to the
+                    large cargo size was addressed by employing high mounted wings which also played a role in
+                    minimising FOD from the cleared dirt runways.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">November 2015 - June 2016</span>
+              <span class="text-primary">March 2014 - June 2014</span>
             </div>
           </div>
           
