--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="subheading mb-5"> 
             <a href="mailto:name@email.com">tgou1055@gmail.com</a>
           </div>
-          <p style="text-align:justify; width:50%; font-weight:bold; font-family:Times New Roman; font-size:20px;">
+          <p class="subheading mb-5" style="text-align:justify; ">  <!--font-weight:bold; font-family:Times New Roman; font-size:20px;-->
             Hi, my name is  Tianpeng, I'm currently studying my master degree in mathematics at University of Technology, Sydney. 
             I have particular interests in computing & engineering stuff and love doing intriguing project.
             Recently, I got caught into the beauty of AI technologies like: Machine Learning, Deep Learning and Reinforcement Learning etc, and 
