--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
-
+    
+    
+    <script src='//www.cameratag.com/v15/js/cameratag.min.js' type='text/javascript'></script>
+    <link rel='stylesheet' href='//www.cameratag.com/v15/css/cameratag.css'>
+  
   </head>
 
   <body id="page-top">
