--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
           </ul>
         </div>
       </section>
+       
+      // If you have the following div:
+     <div id="microphonePlaceHolder"></div>
 
+      // The following JS will init a new microphone and replace your div 
+      CameraTag.init("microphonePlaceHolder", "microphone", {appUuid: "YOUR_APP_UUID", id: "mymicrophone"});
       
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="project">
         <div class="my-auto">
