--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   </head>
 
   <body id="page-top">
-  
-    <microphone id='micro1' data-app-id='[YOUR_APP_UUID]'></microphone>
+    
+   <!-- Test Microphone -->
+    <microphone  id='myFirstMicrophone'data-app-id='a-be7f3eb0-c0b4-013b-29f2-0abe8b919efd'></microphone>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
